--- a/package.json
+++ b/package.json
@@ -11,18 +11,34 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "assert": "^2.0.0",
     "bootstrap": "^5.2.1",
+    "browserify-zlib": "^0.2.0",
+    "buffer": "^6.0.3",
     "cdbreact": "^1.5.3",
-    "firebase": "^9.17.2",
+    "crypto-browserify": "^3.12.0",
+    "express": "^4.18.2",
+    "firebase": "^10.0.0",
+    "firebase-admin": "^11.9.0",
+    "fs-extra": "^11.1.0",
+    "https-browserify": "^1.0.0",
     "mdb-react-ui-kit": "^5.0.0",
     "mdbreact": "^5.2.0",
+    "net": "^1.0.2",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.8",
+    "stream": "^0.0.2",
+    "stream-http": "^3.2.0",
     "sweetalert2": "^11.6.5",
+    "tls": "^0.0.1",
+    "url": "^0.11.0",
+    "util": "^0.12.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -48,5 +64,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^8.36.0",
+    "webpack": "^5.76.1",
+    "webpack-cli": "^5.0.1"
   }
 }
