--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
     "cdbreact": "^1.5.3",
+    "cors": "^2.8.5",
     "crypto-browserify": "^3.12.0",
     "express": "^4.18.2",
     "firebase": "^10.0.0",
